core_headers = files([
    'buffer_sync.hpp',
    'completed_request.hpp',
    'dma_heaps.hpp',
    'frame_info.hpp',
    'rpicam_app.hpp',
    'rpicam_encoder.hpp',
    'logging.hpp',
    'metadata.hpp',
    'options.hpp',
    'post_processor.hpp',
    'still_options.hpp',
    'stream_info.hpp',
    'version.hpp',
    'video_options.hpp',
])

install_headers(core_headers, subdir: meson.project_name() / 'core')
